.argocd-state/hermes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hermes
spec:
  selector:
    app: hermes
  ports:
    - name: http
      protocol: TCP
      port: 9119
      targetPort: 9119
  type: ClusterIP
